--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                     </header>
             
             <div id="main-container" class="container">
-                    <section class="main-section">
+                    <section class="main-container">
                         <h1>Contact</h1>
                         <form id="contact-form">
                             <ul>
@@ -52,10 +52,10 @@
             </div>
             
             <footer>
-                <div class="container">
-                    &copy; Copyright 2018 Alessandra Schiller
-                </div>
-            </footer>
+                    <div class="container">
+                        &copy; Copyright 2018 Alessandra Schiller
+                    </div>
+             </footer>
 
     </body>
 
