--- a/portfolio.html
+++ b/portfolio.html
@@ -22,12 +22,12 @@
                     <h1>Portfolio</h1>
 
                     <div class="work">
-                        <img src="assets/images/serendipity.png" class ="auth-image" alt="Magazine-Spread">
+                        <img src="assets/images/serendipity.jpg" class ="auth-image" alt="Magazine-Spread">
                         <h3>Magazine Spread</h3>
                     </div>
 
                     <div class="work">
-                            <img src="assets/images/mag.png" class ="auth-image" alt="Layout">
+                            <img src="assets/images/mag.jpg" class ="auth-image" alt="Layout">
                             <h3>Magazine Layout</h3>
                     </div>
 
